# know-direction

./: .gitignore  LICENSE.md  README.md  pyproject.toml
know_direction/: create_waypoints.py  travel_speed.py  waypoint_graph.py  world_geography.py
tests/: test_know_direction.py
